--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build-debug",
             "type": "shell",
-            "command": "cmake -DDEV_MODE=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build && cmake --build build",
+            "command": "cmake -DDEV_MODE=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build && cmake --build build --parallel",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -13,8 +13,64 @@
         {
             "label": "build-release",
             "type": "shell",
-            "command": "cmake -DDEV_MODE=ON -DCMAKE_BUILD_TYPE=Release -S . -B build && cmake --build build",
+            "command": "cmake -DDEV_MODE=ON -DCMAKE_BUILD_TYPE=Release -S . -B build && cmake --build build --parallel",
             "group": "build"
+        },
+        {
+            "label": "build-release-with-debug",
+            "type": "shell",
+            "command": "cmake -DDEV_MODE=ON -DCMAKE_BUILD_TYPE=RelWithDebInfo -S . -B build && cmake --build build --parallel",
+            "group": "build"
+        },
+        {
+            "label": "profile-with-instruments",
+            "type": "shell",
+            "command": "xcrun xctrace record --template 'CPU Profiler' --no-prompt --output /tmp/mmutest_profile_$(date +%Y%m%d_%H%M%S).trace --target-stdout - --launch -- ${workspaceFolder}/build/mmutest && open /tmp/mmutest_profile_*.trace",
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            }
+        },
+        {
+            "label": "profile-gssquared-with-instruments",
+            "type": "shell",
+            "command": "xcrun xctrace record --template 'CPU Profiler' --no-prompt --output /tmp/gssquared_profile_$(date +%Y%m%d_%H%M%S).trace --target-stdout - --launch -- ${workspaceFolder}/build/GSSquared -ds5d1=/Users/bazyar/src/gssquared/disk_images/AppleIISystem800k.hdv && open /tmp/gssquared_profile_*.trace",
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            }
+        },
+        {
+            "label": "profile-mmutest-manual",
+            "type": "shell",
+            "command": "xcrun xctrace record --template 'CPU Profiler' --no-prompt --output /tmp/mmutest_profile_$(date +%Y%m%d_%H%M%S).trace --target-stdout - --launch -- ${workspaceFolder}/build/mmutest",
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            },
+            "dependsOn": "build-release-with-debug"
+        },
+        {
+            "label": "profile-gssquared-manual",
+            "type": "shell",
+            "command": "xcrun xctrace record --template 'CPU Profiler' --no-prompt --output /tmp/gssquared_profile_$(date +%Y%m%d_%H%M%S).trace --target-stdout - --launch -- ${workspaceFolder}/build/GSSquared -ds5d1=/Users/bazyar/src/gssquared/disk_images/AppleIISystem800k.hdv",
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            },
+            "dependsOn": "build-release-with-debug"
         }
     ]
 }
