big debugger updates; text edit widget; monitor and memory panes; monitor executes commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,11 +234,12 @@ add_library(gs2_computer src/computer.cpp )
 add_library(gs2_event_dispatcher src/util/EventDispatcher.cpp )
 
 add_library(gs2_util src/util/media.cpp src/util/ResourceFile.cpp src/util/dialog.cpp src/util/mount.cpp 
-    src/util/soundeffects.cpp src/util/EventQueue.cpp src/util/Event.cpp src/util/EventTimer.cpp src/util/TextRenderer.cpp)
+    src/util/soundeffects.cpp src/util/EventQueue.cpp src/util/Event.cpp src/util/EventTimer.cpp src/util/TextRenderer.cpp
+    src/util/HexDecode.cpp)
 
 add_library(gs2_ui src/ui/AssetAtlas.cpp src/ui/Container.cpp src/ui/DiskII_Button.cpp src/ui/Unidisk_Button.cpp 
     src/ui/MousePositionTile.cpp src/ui/OSD.cpp src/ui/Tile.cpp src/ui/Button.cpp src/ui/MainAtlas.cpp src/ui/ModalContainer.cpp
-    src/ui/FadeButton.cpp src/ui/Clipboard.cpp
+    src/ui/FadeButton.cpp src/ui/Clipboard.cpp src/ui/TextInput.cpp
 )
 
 #add_library(gs2_oldmmu src/memory.cpp src/bus.cpp )
