First stage of per-cycle video emulation: replace incr_cycle with mega_ii_cycle(), which generates video bits that will later be rendered to the screen.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,7 +227,7 @@ add_library(gs2_debugger src/debugger/trace.cpp src/debugger/trace_opcodes.cpp s
 
 add_library(gs2_mmu src/mmus/mmu.cpp src/mmus/mmu_ii.cpp )
 
-add_library(gs2_cpu src/cpus/cpu_6502.cpp src/cpus/cpu_65c02.cpp src/cpu.cpp )
+add_library(gs2_cpu src/cpus/cpu_6502.cpp src/cpus/cpu_65c02.cpp src/cpu.cpp src/clock.cpp )
 
 add_library(gs2_computer src/computer.cpp )
 
