--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,6 +232,8 @@ add_library(gs2_cpu src/cpus/core_6502.cpp src/cpu.cpp )
 
 add_library(gs2_computer src/computer.cpp )
 
+add_library(gs2_clock src/clock.cpp )
+
 add_library(gs2_event_dispatcher src/util/EventDispatcher.cpp )
 
 add_library(gs2_util src/util/media.cpp src/util/ResourceFile.cpp src/util/dialog.cpp src/util/mount.cpp 
