--- a/apps/cputest/CMakeLists.txt
+++ b/apps/cputest/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(cputest main.cpp)
 target_link_libraries(cputest PRIVATE
     gs2_mmu
     gs2_util
-    gs2_cpu 
+    gs2_cpu
+    gs2_clock
     gs2_debugger
     #gs2_oldmmu
 )
