reworked video system access to memory to ensure correct (for the II/II+) floating bus values are available.

--- a/apps/mmutest/CMakeLists.txt
+++ b/apps/mmutest/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_executable(mmutest main.cpp)
 
 target_link_libraries(mmutest PRIVATE
+    gs2_util
+    gs2_cpu
+    gs2_clock
+    gs2_debugger
     gs2_mmu
 )
