removal of dead code and updating CMakeList for compilation of "apps" after merge

--- a/apps/dpp/CMakeLists.txt
+++ b/apps/dpp/CMakeLists.txt
@@ -4,5 +4,9 @@ add_executable(wood woodeneye-008.c)
 
 target_link_libraries(dpp PRIVATE
     gs2_displaypp
+    gs2_debugger
+    gs2_cpu
+    gs2_clock
+    gs2_mmu
     gs2_ntsc
 )
